--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
 		"vue": "^3.2.37",
 		"vue-cropperjs": "^5.0.0",
 		"vue-router": "^4.1.3",
-		"vue-schart": "^2.0.0",
-		"wangeditor": "^4.7.15"
+		"vue-schart": "^2.0.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^3.0.0",
